Finish lecture and restructure folders

--- a/lecture/main.tex
+++ b/lecture/main.tex
@@ -1,3 +1,5 @@
+% !TEX root = main.tex
+
 \documentclass{beamer}
 \usepackage{listings}
 \usepackage{booktabs}
@@ -24,8 +26,9 @@
 }
 \lstset{style=latexStyle}
 
-
-\title{Introducción a \LaTeX}
+\title{Cómo escribir en \LaTeX}
+\subtitle{... y no enloquecer en el intento}
+\institute{Facultad de Matemática y Computación\\Universidad de la Habana}
 \author{Jorge Morgado Vega}
 \date{Julio, 2023}
 
@@ -35,5 +38,7 @@
 \include{sections/intro}
 \include{sections/basics}
 \include{sections/structure}
+\include{sections/interm}
 
+\maketitle
 \end{document}
