--- a/example/main.tex
+++ b/example/main.tex
@@ -103,14 +103,14 @@ Se usa para nombrar elementos que tienen un orden:
 
 \section{Expresiones matemáticas}\label{sec:math}
 
-Existen diversos comandos y entornos que permiten escrbir todo tipo de
-expresioens matemáticas.
+Existen diversos comandos y entornos que permiten escribir todo tipo de
+expresiones matemáticas.
 
 El más simple es mediante el uso del caracter \$. Este se emplea cuando se
 quiere insertar una expresión dentro de un texto. Por ejemplo, si $A \subseteq
 B$ y $B \subseteq C$ entonces se puede decir que $A \subseteq C$.
 
-Si se usa el caracter \$ doble entonces al renderiza la expresión se hara un
+Si se usa el caracter \$ doble entonces al renderiza la expresión se har un
 salto de línea en ambos extremos y se mostrará centrada. Por ejemplo, si $$x \ge
 y \wedge y \ge z$$ entonces $x \ge z$.
 
@@ -128,14 +128,14 @@ cuerpo de masa $m_1$ y un cuerpo de masa $m_2$ que se encuentran separados por
 una distancia $r$.
 
 Para una guía de todo lo que se puede realizar con respecto a estructuras
-matemáticas pueden referise al manual de \texttt{amsmath}\footnote{Disponible
+matemáticas pueden referirse al manual de \texttt{amsmath}\footnote{Disponible
 en: \url{http://www.ams.org/arc/tex/amsmath/amsldoc.pdf}}
 
 \section{Imágenes}\label{sec:img-and-tables}
 
 Como se mostró en la presentación, se pueden usar el entorno \texttt{figure}
 junto con el comando \texttt{includegraphics} para agregar imágenes al
-documento.  La opción \texttt{[h]} del entrno \texttt{figure} indica a latex que
+documento.  La opción \texttt{[h]} del entorno \texttt{figure} indica a latex que
 inserte la figura en la misma posición en la que se declaró en el documento
 \texttt{.tex}.
 
