--- a/lecture/main.tex
+++ b/lecture/main.tex
@@ -26,8 +26,8 @@
 }
 \lstset{style=latexStyle}
 
-\title{Cómo escribir en \LaTeX}
-\subtitle{... y no enloquecer en el intento}
+\title{Introducción a \LaTeX}
+\subtitle{}
 \institute{Facultad de Matemática y Computación\\Universidad de la Habana}
 \author{Jorge Morgado Vega}
 \date{Julio, 2023}
