--- a/lecture/sections/basics.tex
+++ b/lecture/sections/basics.tex
@@ -36,7 +36,7 @@ Existen dos conceptos principales en \LaTeX: comandos y entornos.
 
 Un comando ejecuta una acción. La misma puede ser para establecer una
 configuración, importar algun paquete, o incluso cambiar la forma en la que se
-renderiza un texto. Los comandos están compuesto de la siguiente forma:
+renderiza un texto. Los comandos están compuestos de la siguiente forma:
 
 \begin{verbatim}
 \nombre[opciones]{parámetro}
@@ -64,7 +64,7 @@ parte del documento. Los entornos se estructuran de la siguiente forma:
 
 \end{frame}
 
-\begin{frame}{Ejemplos}
+\begin{frame}{Ejemplos de comandos}
 
 \begin{center}
 \begin{tabular}{lr}
@@ -78,7 +78,7 @@ parte del documento. Los entornos se estructuran de la siguiente forma:
 
 \end{frame}
 
-\begin{frame}{Ejemplos}
+\begin{frame}{Ejemplos de comandos}
 \begin{center}
 \color{red}\text{\small\emph{Estos comandos afectan al entorno completo donde se
 encuentren}}\color{black}\\[5mm]
@@ -166,7 +166,7 @@ columna alineada a la derecha (\texttt{r}).
 \only<2>{
 Las filas se escriben en el cuerpo del entorno, separando cada columna entre \&
 y cada fila entre \textbackslash\textbackslash. Además se pueden utilizar comandos para
-agregar sepradores, unir celdas, etc.
+agregar separadores, unir celdas, etc.
 }
 
 \end{frame}
