--- a/lecture/sections/structure.tex
+++ b/lecture/sections/structure.tex
@@ -22,7 +22,7 @@ mismo y además varios comandos. En el primer ejemplo se mostró la clase
 \subsection{Presentación}
 \begin{frame}[fragile]{Presentación}
 
-Una página de presentación se puede estrucuturar manualmente:
+Una página de presentación se puede estructurar manualmente:
 
 \begin{center}
 \begin{columns}
@@ -52,7 +52,7 @@ Una página de presentación se puede estrucuturar manualmente:
 
 \pause
 
-Sin embargo, la gran mayoria de las clases que tiene \LaTeX por defecto
+Sin embargo, la gran mayoría de las clases que tiene \LaTeX por defecto
 brindan comandos para estructurar de manera sencilla la presentación de un
 documento:
 
@@ -66,12 +66,12 @@ documento:
 \end{frame}
 
 \subsection{Secciones, subsecciones y más...}
-\begin{frame}[fragile]{Secciones, subsecciones, y más...}
+\begin{frame}[fragile]{Secciones, subsecciones y más...}
 Específicamente en la clase \texttt{article} se pueden definir secciones,
-subsecciones y subsubsecciones. Existen varias ventaja que trae organizar el
+subsecciones y subsubsecciones. Existen varias ventajas que trae organizar el
 documento usando estos comandos: enumeración automática, generación de tablas
 de contenido de forma automática, son fáciles de referenciar a lo largo del
-documeto, etc.
+documento, etc.
 
 \begin{lstlisting}[basicstyle=\tiny]
 \section{Introduction}
